Refatoração do código.

--- a/builder.html
+++ b/builder.html
@@ -4,7 +4,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>Demo</title>
-	<link rel="stylesheet" href="css/estilo.css" />
+	<link rel="stylesheet" href="css/geral.css" />
+	<link rel="stylesheet" href="css/builder.css" />
 	<link rel="stylesheet" href="css/animation.css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<script src="jquery-3.3.1.min.js"></script>
@@ -17,17 +18,8 @@
 		<div id="comandos">
 			<h2>Comandos Auxiliares</h2>
 			<button id="limpar">Limpar Mapa</button>
-			<button id="new-personagem">Escolher Personagem</button>
 		</div>
-		<div id="cenario">
-			<div class="personagem"></div>
-			<div class="personagem-select">
-				<h2>Selecione um Personagem</h2>
-				<div class="personagem-face"></div>
-				<div class="personagem-face"></div>
-				<div class="personagem-face"></div>
-			</div>
-		</div>
+		<div id="cenario"></div>
 		<div id="tiles">
 			<h2>Escolha um tile</h2>
 		</div>
