--- a/battle.html
+++ b/battle.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Demo</title>
+	<link rel="stylesheet" href="css/geral.css" />
 	<link rel="stylesheet" href="css/battle.css" />
 	<link rel="stylesheet" href="css/animation.css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
