Sonorização inicial - disparos, backgrounde winning.

--- a/battle.html
+++ b/battle.html
@@ -22,13 +22,13 @@
 					<figure>
 						<img></img>
 					</figure>
-					<label for="name">Name: 
+					<label for="name">Name:
 						<input class="name" readonly>
 					</label>
-					<label for="life">Life: 
+					<label for="life">Life:
 						<input class="life" readonly>
 					</label>
-					<label for="attack">Attack: 
+					<label for="attack">Attack:
 						<input class="attack" readonly>
 					</label>
 				</div>
@@ -57,13 +57,13 @@
 					<figure>
 						<img class="player-two-img"></img>
 					</figure>
-					<label for="name">Name: 
+					<label for="name">Name:
 						<input class="name" readonly>
 					</label>
-					<label for="life">Life: 
+					<label for="life">Life:
 						<input class="life" readonly>
 					</label>
-					<label for="attack">Attack: 
+					<label for="attack">Attack:
 						<input class="attack" readonly>
 					</label>
 				</div>
@@ -71,6 +71,23 @@
 			</div>
 		</div>
 	</div>
+	<div class="winner-banner">
+		<h3>Winner</h3>
+		<div class="winner-box">
+			<div class="winner-player"></div>
+		</div>
+	</div>
+
+	<audio class="explosion_sound" src="sounds/explode.ogg">
+		<p>Navegador não suporta o elemento audio.</p>
+	</audio>
+	<audio class="fire_sound" src="sounds/fire.ogg"></audio>
+	<audio class="background_sound">
+		<source src="sounds/time_of_the_dreamwatch.mp3" type="audio/mpeg">
+	</audio>
+	<audio class="winner_sound">
+		<source src="sounds/fanfare.mp3" type="audio/mpeg">
+	</audio>
 </body>
 
 </html>
