--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
 
 <body>
 	<div id="container">
-        <h1>MAP BUILDER</h1>
+        <h1>DRAGON LIGHT</h1>
         <nav>
             <ul>
                 <li><a href="builder.html">Construir Cenário</a></li>
