Battle Mode - Life Bar.

--- a/battle.html
+++ b/battle.html
@@ -22,11 +22,16 @@
 					<figure>
 						<img></img>
 					</figure>
+					<section class="life-section">
+						<label class="life-label">Life:
+							<p class="life-value">10</p>
+						</label>
+						<div class="life-bar-border">
+							<div class="life-bar"></div>
+						</div>
+					</section>
 					<label for="name">Name:
 						<input class="name" readonly>
-					</label>
-					<label for="life">Life:
-						<input class="life" readonly>
 					</label>
 					<label for="attack">Attack:
 						<input class="attack" readonly>
@@ -57,11 +62,16 @@
 					<figure>
 						<img class="player-two-img"></img>
 					</figure>
+					<section class="life-section">
+						<label class="life-label">Life:
+							<p class="life-value">10</p>
+						</label>
+						<div class="life-bar-border">
+							<div class="life-bar"></div>
+						</div>
+					</section>
 					<label for="name">Name:
 						<input class="name" readonly>
-					</label>
-					<label for="life">Life:
-						<input class="life" readonly>
 					</label>
 					<label for="attack">Attack:
 						<input class="attack" readonly>
