--- a/battle.html
+++ b/battle.html
@@ -64,7 +64,7 @@
 					</figure>
 					<section class="life-section">
 						<label class="life-label">Life:
-							<p class="life-value">10</p>
+							<p class="life-value"></p>
 						</label>
 						<div class="life-bar-border">
 							<div class="life-bar"></div>
